[ENG-6] refactor